<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CardBag</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <plurals name="selectedCardCount">
        <item quantity="one"><xliff:g>%d</xliff:g> selected</item>
        <item quantity="other"><xliff:g>%d</xliff:g> selected</item>
    </plurals>
    <string name="noGiftCards">Click the + plus button to add a card, or import some from the ⋮ menu.</string>
    <string name="noGiftCardsGroup">Create some cards, and then assign them to the group here.</string>
    <string name="noMatchingGiftCards">No results. Try changing your search.</string>
    <string name="storeName">Name</string>
    <string name="note">Note</string>
    <string name="cardId">Card ID</string>
    <string name="barcodeType">Barcode type</string>
    <string name="barcodeNoBarcode">There is no barcode</string>
    <string name="noBarcode">No barcode</string>
    <string name="star">Add to favorites</string>
    <string name="unstar">Remove from favorites</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="deleteTitle">Delete card</string>
    <plurals name="deleteCardsTitle">
        <item quantity="one">Delete <xliff:g>%d</xliff:g> card</item>
        <item quantity="other">Delete <xliff:g>%d</xliff:g> cards</item>
    </plurals>
    <string name="deleteConfirmation">Delete this card permanently?</string>
    <plurals name="deleteCardsConfirmation">
        <item quantity="one">Delete this <xliff:g>%d</xliff:g> card permanently?</item>
        <item quantity="other">Delete these <xliff:g>%d</xliff:g> cards permanently?</item>
    </plurals>
    <string name="ok">OK</string>
    <string name="copy_to_clipboard">Copy ID to clipboard</string>
    <string name="share">Share</string>
    <string name="sendLabel">Send…</string>
    <string name="editCardTitle">Edit Card</string>
    <string name="addCardTitle">Add Card</string>
    <string name="scanCardBarcode">Scan Barcode</string>
    <string name="cardShortcut">Card Shortcut</string>
    <string name="noCardsMessage">Add a card first</string>
    <string name="card_ids_copied">Copied ID(s)</string>
    <string name="barcodeImageDescriptionWithType">Image <xliff:g>%s</xliff:g> barcode</string>
    <string name="noStoreError">No name entered</string>
    <string name="noCardIdError">No ID entered</string>
    <string name="noCardExistsError">Could not find that card</string>
    <string name="failedParsingImportUriError">Could not parse the import URI</string>
    <string name="importExport">Import/Export</string>
    <string name="exportName">Export</string>
    <string name="importExportHelp">Backing up your data allows moving it to another device.</string>
    <string name="importSuccessfulTitle">Imported</string>
    <string name="importFailedTitle">Import failed</string>
    <string name="importFailed">Could not perform import</string>
    <string name="exportSuccessfulTitle">Exported</string>
    <string name="exportFailedTitle">Export failed</string>
    <string name="exportFailed">Could not perform export</string>
    <string name="importing">Importing…</string>
    <string name="exporting">Exporting…</string>
    <string name="noExternalStoragePermissionError">Grant external storage permission to import or export data</string>
    <string name="exportOptionExplanation">The data will be written to a location of your choice.</string>
    <string name="importOptionFilesystemTitle">Import from filesystem</string>
    <string name="importOptionFilesystemExplanation">Choose a specific file from the filesystem.</string>
    <string name="importOptionFilesystemButton">From filesystem</string>
    <string name="importOptionApplicationTitle">Use another app</string>
    <string name="importOptionApplicationExplanation">Use any app or your favorite file manager to open a file.</string>
    <string name="importOptionApplicationButton">Use another app</string>
    <string name="about">About</string>
    <string name="app_copyright_fmt" tools:ignore="PluralsCandidate">Copyright © 2019–<xliff:g>%d</xliff:g> Sylvia van Os</string>
    <string name="app_copyright_old">Based on Loyalty Card Keychain\ncopyright © 2016–2020 Branden Archer</string>
    <string name="app_license">Copylefted libre software, licensed GPLv3+</string>
    <string name="about_title_fmt">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="debug_version_fmt">Version: <xliff:g id="version">%s</xliff:g></string>
    <string name="app_revision_fmt">Revision Info: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="app_libraries">Libre third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="app_resources">Libre third-party resources: <xliff:g id="app_resources_list">%s</xliff:g></string>
    <string name="selectBarcodeTitle">Select Barcode</string>
    <string name="enterBarcodeInstructions">Enter the ID, and either pick a barcode type below, or “There is no barcode”.</string>
    <string name="copy_to_clipboard_toast">ID copied to clipboard</string>
    <string name="thumbnailDescription">Thumbnail</string>
    <string name="starImage">Favorite star</string>
    <string name="settings">Settings</string>
    <string name="settings_category_title_ui">User interface</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_key_theme" translatable="false">pref_theme</string>
    <string name="settings_system_theme">System</string>
    <string name="settings_key_system_theme" translatable="false">system</string>
    <string name="settings_light_theme">Light</string>
    <string name="settings_key_light_theme" translatable="false">light</string>
    <string name="settings_dark_theme">Dark</string>
    <string name="settings_key_dark_theme" translatable="false">dark</string>
    <string name="settings_card_orientation">Barcode orientation</string>
    <string name="settings_key_card_orientation" translatable="false">pref_card_orientation</string>
    <string name="settings_follow_system_orientation">Follow system</string>
    <string name="settings_key_follow_system_orientation" translatable="false">follow_system</string>
    <string name="settings_portrait_orientation">Portrait</string>
    <string name="settings_key_portrait_orientation" translatable="false">portrait</string>
    <string name="settings_landscape_orientation">Landscape</string>
    <string name="settings_key_landscape_orientation" translatable="false">landscape</string>
    <string name="settings_lock_on_opening_orientation">Lock to orientation used when opening the card</string>
    <string name="settings_key_lock_on_opening_orientation" translatable="false">lock_on_opening</string>
    <string name="settings_key_max_font_size_scale" translatable="false">pref_max_font_size_scale</string>
    <string name="settings_max_font_size_scale">Max. font size</string>
    <string name="settings_display_barcode_max_brightness">Brighten barcode view</string>
    <string name="settings_key_display_barcode_max_brightness" translatable="false">pref_display_card_max_brightness</string>
    <string name="settings_keep_screen_on">Keep screen on</string>
    <string name="settings_key_keep_screen_on" translatable="false">pref_keep_screen_on</string>
    <string name="settings_disable_lockscreen_while_viewing_card">Prevent screen lock</string>
    <string name="settings_key_disable_lockscreen_while_viewing_card" translatable="false">pref_disable_lockscreen_while_viewing_card</string>
    <string name="settings_key_oled_dark" translatable="false">pref_oled_dark</string>
    <string name="sharedpreference_active_tab" translatable="false">sharedpreference_active_tab</string>
    <string name="sharedpreference_privacy_policy_shown" translatable="false">sharedpreference_privacy_policy_shown</string>
    <string name="sharedpreference_sort" translatable="false">sharedpreference_sort</string>
    <string name="sharedpreference_sort_order" translatable="false">sharedpreference_sort_order</string>
    <string name="sharedpreference_sort_direction" translatable="false">sharedpreference_sort_direction</string>
    <string name="sharedpreference_card_details" translatable="false">sharedpreference_card_details</string>
    <string name="sharedpreference_card_details_show" translatable="false">sharedpreference_card_details_show</string>
    <string name="intent_import_card_from_url_share_text">I want to share a card with you</string>
    <string name="intent_import_card_from_url_host_catima_app" translatable="false">catima.app</string>
    <string name="intent_import_card_from_url_path_prefix_catima_app" translatable="false">/share</string>
    <string name="intent_import_card_from_url_host_thelastproject" translatable="false">thelastproject.github.io</string>
    <string name="intent_import_card_from_url_path_prefix_thelastproject" translatable="false">/Catima/share</string>
    <string name="intent_import_card_from_url_host_brarcher" translatable="false">brarcher.github.io</string>
    <string name="intent_import_card_from_url_path_prefix_brarcher" translatable="false">/loyalty-card-locker/share</string>
    <string name="importSuccessful">Data imported</string>
    <string name="exportSuccessful">Data exported</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="groups">Groups</string>
    <string name="group_edit">Edit Group</string>
    <string name="noGroups">Click the + plus button to add groups for categorization.</string>
    <string name="noGroupCards">This group is empty</string>
    <plurals name="groupCardCount">
        <item quantity="one"><xliff:g>%d</xliff:g> card</item>
        <item quantity="other"><xliff:g>%d</xliff:g> cards</item>
    </plurals>
    <string name="group_name_already_in_use">Group name already in use</string>
    <string name="group_name_is_empty">Group name cannot be empty</string>
    <string name="group_updated">Group updated</string>
    <string name="all">All</string>
    <string name="deleteConfirmationGroup">Delete group?</string>
    <string name="failedOpeningFileManager">Install a file manager first.</string>
    <string name="moveUp">Move upwards</string>
    <string name="moveDown">Move downwards</string>
    <string name="leaveWithoutSaveTitle">Exit</string>
    <string name="leaveWithoutSaveConfirmation">Leave without saving?</string>
    <string name="addManually">Manually enter ID</string>
    <string name="addFromImage">Select image from gallery</string>
    <string name="groupsList">Groups: <xliff:g>%s</xliff:g></string>
    <string name="editGroup">Editing Group: <xliff:g>%s</xliff:g></string>
    <string name="expiryStateSentence">Expires: <xliff:g>%s</xliff:g></string>
    <string name="expiryStateSentenceExpired">Expired: <xliff:g>%s</xliff:g></string>
    <string name="about_card_bag">About Card Bag</string>
    <string name="card_bag">Card Bag</string>
    <string name="current_version_about">Current Version</string>
    <string name="author_about">Author</string>
    <string name="address_about">Address of code</string>
    <string name="privacy_about">Privacy Policy</string>
    <string name="reference_about">Reference</string>
    <string name="permit_about">Permit</string>
    <string name="permission_about">Permission Application</string>
    <string name="card_name_edit">Card Name:</string>
    <string name="card_id_edit">Card ID:</string>
    <string name="due_time_edit">Due Time :</string>
    <string name="note_edit">Note:</string>
    <string name="type_edit">Type:</string>
    <string name="add_code_edit">add code</string>
</resources>