<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fefefe">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#2F3799"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/main_back"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="11dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/main_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:text="@string/card_bag"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>



    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="#fb7a6a"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/card_name_edit"
            android:layout_width="360px"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:gravity="bottom"
            android:text="@string/card_name_edit"
            android:textColor="@color/black"
            android:textSize="19dp"

            />

        <EditText
            android:id="@+id/main_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:background="#00FFFFFF"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <View  android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#A8AAA8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/card_id_edit"
            android:layout_width="270px"
            android:layout_height="42dp"
            android:gravity="bottom"
            android:text="@string/card_id_edit"
            android:textColor="@color/black"
            android:textSize="19dp" />

        <EditText
            android:id="@+id/main_card_id"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="-10dp"
            android:background="#00FFFFFF"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>
    <View  android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#A8AAA8"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/due_time_edit"
            android:layout_width="330px"
            android:layout_height="42dp"
            android:text="@string/due_time_edit"
            android:textColor="@color/black"
            android:textSize="19dp"
            android:gravity="bottom"
            />
        <EditText
            android:id="@+id/main_card_expiration_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:textSize="17sp"/>
    </LinearLayout>
    <View  android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#A8AAA8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/note_edit"
            android:layout_width="210px"
            android:layout_height="42dp"
            android:text="@string/note_edit"
            android:textColor="@color/black"
            android:textSize="19dp"
            android:gravity="bottom"
            />
        <EditText
            android:id="@+id/main_card_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:textSize="17sp"/>
    </LinearLayout>
    <View  android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#A8AAA8"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/type_edit"
            android:layout_width="210px"
            android:layout_height="42dp"
            android:text="@string/type_edit"
            android:textColor="@color/black"
            android:textSize="19dp"
            android:gravity="bottom"
            />
        <EditText
            android:id="@+id/main_card_type"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:textSize="17sp"/>
        <Button
            android:id="@+id/add_code"
            android:layout_width="350px"
            android:layout_height="40dp"
            android:layout_marginTop="-7dp"
            android:layout_marginLeft="10dp"
            android:text="@string/add_code_edit"
            android:textSize="15dp"
            android:background="#FF2F3799"
            android:gravity="center"
            />
    </LinearLayout>
    <View  android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#A8AAA8"/>

    <ImageView
        android:id="@+id/main_card_code"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        />





    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2F3799"/>
<!--    <RelativeLayout-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical" >-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="55dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/delete"
                android:paddingBottom="10dp"
                android:paddingTop="9dp"/>
            <ImageView
                android:id="@+id/note_save"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/save"
                android:paddingBottom="10dp"
                android:paddingTop="9dp"/>
        </LinearLayout>
<!--    </RelativeLayout>-->
</LinearLayout>
