<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fefefe">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#2F3799"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/about_back"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="11dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/main_name_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:text="@string/about_card_bag"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>



    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="#fb7a6a"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/version_about"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="2dp"
                android:gravity="bottom"
                android:text="@string/current_version_about"
                android:textColor="#272727"
                android:textSize="22dp" />

            <TextView
                android:layout_width="360px"
                android:layout_height="30dp"
                android:text="1.0.0.2   "
                android:textColor="#3E3E3E"
                android:textSize="19dp"
                android:gravity="bottom"
                />
        </LinearLayout>

        <ImageButton
            android:id="@+id/more_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:background="@color/white"
            android:src="@drawable/ic_arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/author_about"
                android:layout_width="360px"
                android:layout_marginTop="2dp"
                android:layout_height="30dp"
                android:text="@string/author_about"
                android:textColor="#272727"
                android:textSize="22dp"
                android:gravity="bottom"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="YutingHuang @20205737   "
                android:textColor="#3E3E3E"
                android:textSize="19dp"
                android:gravity="bottom"
                />
        </LinearLayout>

        <ImageButton
            android:id="@+id/more_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:background="@color/white"
            android:src="@drawable/ic_arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address_about"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="2dp"
                android:gravity="bottom"
                android:text="@string/address_about"
                android:textColor="#272727"
                android:textSize="22dp" />

            <TextView
                android:layout_width="360px"
                android:layout_height="30dp"
                android:text="csmoodle   "
                android:textColor="#3E3E3E"
                android:textSize="19dp"
                android:gravity="bottom"
                />
        </LinearLayout>

        <ImageButton
            android:id="@+id/more_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:background="@color/white"
            android:src="@drawable/ic_arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/policy_about"
                android:layout_width="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_height="30dp"
                android:text="@string/privacy_about"
                android:textColor="#272727"
                android:textSize="22dp"
                android:gravity="bottom"
                />
            <TextView
                android:id="@+id/subpolicy_about"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/permission_about"
                android:textColor="#3E3E3E"
                android:textSize="19dp"
                android:gravity="bottom"
                />
        </LinearLayout>

        <ImageButton
            android:id="@+id/more_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:background="@color/white"
            android:src="@drawable/ic_arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/reference_about"
                android:layout_width="360px"
                android:layout_marginTop="2dp"
                android:layout_height="30dp"
                android:text="@string/reference_about"
                android:textColor="#272727"
                android:textSize="22dp"
                android:gravity="bottom"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="gitHub: Android zxingLibrary   "
                android:textColor="#3E3E3E"
                android:textSize="19dp"
                android:gravity="bottom"
                />
        </LinearLayout>

        <ImageButton
            android:id="@+id/more_button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:background="@color/white"
            android:src="@drawable/ic_arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/permit_about"
                android:layout_width="360px"
                android:layout_marginTop="2dp"
                android:layout_height="30dp"
                android:text="@string/permit_about"
                android:textColor="#272727"
                android:textSize="22dp"
                android:gravity="bottom"
                />
            <TextView
                android:layout_width="360px"
                android:layout_height="30dp"
                android:text="   "
                android:textColor="#3E3E3E"
                android:textSize="19dp"
                android:gravity="bottom"
                />
        </LinearLayout>

        <ImageButton
            android:id="@+id/more_button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:background="@color/white"
            android:src="@drawable/ic_arrow" />
    </LinearLayout>

















</LinearLayout>
